Navbar, Booking, Cancelling
First update on the navbar, booking, and cancelling elements/sections of the website with other small changes

--- a/styles.css
+++ b/styles.css
@@ -22,3 +22,11 @@
     margin: 20px;
     border-radius: 10%;
 }
+
+.book-cancel-bg-image {
+    background-image: url("images/wood.jpg");
+    padding: 30px 50px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
