Booking Cancelling JS
Mostly the JS for the booking and cancelling sections

--- a/styles.css
+++ b/styles.css
@@ -30,3 +30,11 @@
     background-position: center;
     background-repeat: no-repeat;
 }
+
+.active {
+    display: block;
+}
+
+.inactive {
+    display: none;
+}
